address PR comments about logging and static var names